# CyberLens

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260312_0001_initial_schema.py
backend/src/cyberlens/: __init__.py  config.py  dependencies.py  main.py
backend/src/cyberlens/analytics/: __init__.py  router.py  schemas.py  service.py
backend/src/cyberlens/common/: __init__.py  exceptions.py  logging.py  schemas.py  time_utils.py
backend/src/cyberlens/db/: __init__.py  base.py  enums.py  models.py  session.py
backend/src/cyberlens/demo/: __init__.py  generator.py  router.py  schemas.py  seed.py  service.py  types.py
backend/src/cyberlens/detection/: __init__.py  engine.py  models.py  router.py  rule_loader.py  schemas.py  service.py
backend/src/cyberlens/incidents/: __init__.py  models.py  playbook_runner.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_health.py
backend/tests/test_api/: test_analytics_api.py  test_demo_api.py  test_detection_api.py  test_incidents_api.py  test_ingestion_api.py  test_settings_api.py
backend/tests/test_detection/: test_model_registry.py  test_process_stream_event.py  test_rule_loader.py
backend/tests/test_ingestion/: test_baseline_emitter.py  test_normalizer.py  test_pipeline.py
backend/tests/test_mitre/: test_service.py
nginx/: Dockerfile  (+1 more)
(+116 files in other folders)
